force-app/segments/main/default/objects/Demo_DMO_Transaction__c/Demo_DMO_Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TXN-{00000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>