force-app/segments/main/default/objects/Demo_DMO_Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Banking</fullName><default>false</default><label>Banking</label></value>
            <value><fullName>Investment</fullName><default>false</default><label>Investment</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Loan</fullName><default>false</default><label>Loan</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Subscription</fullName><default>false</default><label>Subscription</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>